--- a/docker/flink/log4j-cli.properties
+++ b/docker/flink/log4j-cli.properties
@@ -16,14 +16,12 @@
 # limitations under the License.
 ################################################################################
 
-log4j.rootLogger=INFO, console, file
+log4j.rootLogger=INFO, file
 
 # Log all infos in the given file
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.file=/opt/flink/log/output.log
-log4j.appender.file.MaxFileSize=10MB
-log4j.appender.file.MaxBackupIndex=8
-log4j.appender.file.append=true
+log4j.appender.file.file=${log.file}
+log4j.appender.file.append=false
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
 
@@ -42,4 +40,4 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p
 log4j.logger.org.apache.hadoop.util.NativeCodeLoader=OFF
 
 # suppress the irrelevant (wrong) warnings from the netty channel handler
-log4j.logger.org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline=ERROR, console, file
+log4j.logger.org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline=ERROR, file
