--- a/docker/flink/log4j-console.properties
+++ b/docker/flink/log4j-console.properties
@@ -17,18 +17,23 @@
 ################################################################################
 
 # This affects logging for both user code and Flink
-log4j.rootLogger=INFO, console
+log4j.rootLogger=INFO, console, file
 
-# Uncomment this if you want to _only_ change Flink's logging
-#log4j.logger.org.apache.flink=INFO
+# Log all infos in the given file
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.file=${log.file}
+log4j.appender.file.MaxFileSize=10MB
+log4j.appender.file.MaxBackupIndex=8
+log4j.appender.file.append=true
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-32c %x - %m%n
 
-# The following lines keep the log level of common libraries/connectors on
-# log level INFO. The root logger does not override this. You have to manually
-# change the log levels here.
-log4j.logger.akka=INFO
-log4j.logger.org.apache.kafka=INFO
-log4j.logger.org.apache.hadoop=INFO
-log4j.logger.org.apache.zookeeper=INFO
+
+# Log output from org.apache.flink.yarn to the console. This is used by the
+# CliFrontend class when using a per-job YARN cluster.
+log4j.logger.org.apache.flink.yarn=INFO, console
+log4j.logger.org.apache.flink.yarn.cli.FlinkYarnSessionCli=INFO, console
+log4j.logger.org.apache.hadoop=INFO, console
 
 # Log all infos to the console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -36,4 +41,4 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
 
 # Suppress the irrelevant (wrong) warnings from the Netty channel handler
-log4j.logger.org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline=ERROR, console
+log4j.logger.org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline=ERROR, console, file
