--- a/pom.xml
+++ b/pom.xml
@@ -83,18 +83,6 @@ under the License.
 			<version>1.9.0</version>
 		</dependency>
 
-		<!-- https://github.com/protocolbuffers/protobuf/tree/master/java -->
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>3.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java-util</artifactId>
-			<version>3.6.1</version>
-		</dependency>
-
 		<!-- Add logging framework, to produce console output when running in the IDE. -->
 		<!-- These dependencies are excluded from the application JAR by default. -->
 		<dependency>
@@ -149,7 +137,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.tencent.flink.KafkaConsumer</mainClass>
+									<mainClass>com.zzz.flink.FLinkJoinTest</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -246,33 +234,6 @@ under the License.
 								<source>src/test/scala</source>
 							</sources>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Protobuf Scala -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.xolstice.maven.plugins</groupId>
-				<artifactId>protobuf-maven-plugin</artifactId>
-				<version>0.6.1</version>
-				<configuration>
-					<protocExecutable>/usr/local/bin/protoc</protocExecutable>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>test-compile</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
